# GMBUSLib

./: .gitignore  CMakeLists.txt  ModBusBuffer.cpp  ModBusBuffer.hpp  ModbusDriver.cpp  ModbusDriver.hpp  ModbusDriverTypes.cpp  ModbusDriverTypes.hpp  README.md  build_debug.bat  build_release.bat  main.cpp  prepare_VisualStudio.bat  prepare_build.bat
ModbusSlaveTestTool/DataTypeTest/: DataTypeTest01.msw  Mbslave- Message01.mbs  Mbslave- Message02.mbs
